--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <p><i class="fas fa-phone"></i> +1 234 567 890</p>
                     <p><i class="fas fa-envelope"></i> info@paradisehostel.com</p>
                 </div>
-                <form class="contact-form">
+                <form class="contact-form" action="https://formsubmit.co/spprt.clickchak@gmail.com">
                     <input type="text" placeholder="Your Name" required>
                     <input type="email" placeholder="Your Email" required>
                     <textarea placeholder="Your Message" required></textarea>
