--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <input type="text" name="Name" placeholder="Your Name" required>
                     <input type="email" name="Email" placeholder="Your Email" required>
                     <textarea placeholder="Your Message" name="Message" required></textarea>
-                    <button type="submit" class="cta-button">Send Message</button>
+                    <button class="cta-button">Send Message</button>
                 </form>
             </div>
         </section>
