--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luxury Hostel & Accommodations</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Add Font Awesome for icons -->
+    <!-- dft font (aswm) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+    <!-- load -->
     <div id="loading-spinner"></div>
     <header>
-        <h1>Paradise Hostel</h1>
+        <h1>Wall Maria Hostel</h1>
         <nav>
             <ul>
                 <li><a href="#home"><i class="fas fa-home"></i> Home</a></li>
@@ -22,7 +23,8 @@
             </ul>
         </nav>
     </header>
-
+    
+<!-- dft main hmpage -->
     <main>
         <section id="home" class="hidden-left" style="display: block;">
             <h2>Welcome to Paradise</h2>
@@ -45,19 +47,21 @@
                 </div>
                 <div class="card">
                     <img src="h4p.jpg" alt="Secure Hostel">
-                    <p>At Paradise Hostel, we prioritize your safety and comfort. Our premises are equipped with 24/7 security and CCTV surveillance. We also offer secure parking for guests traveling by car or motorcycle.</p>
+                    <p>At Wall Maria Hostel, we prioritize your safety and comfort. Our premises are equipped with 24/7 security and CCTV surveillance. We also offer secure parking for guests traveling by car or motorcycle.</p>
                 </div>
                 <div class="card">
                     <h3>Guest Testimonials</h3>
                     <ul>
-                        <li>"The best hostel experience I've ever had! The staff was incredibly friendly and helpful." - Sarah, USA</li>
-                        <li>"A perfect place to stay in Kathmandu. Clean rooms and great facilities." - Rajesh, India</li>
-                        <li>"Loved the location and the vibe of the hostel. Highly recommended!" - Emma, UK</li>
+                        <li>"The best hostel experience I've ever had! The staff was incredibly friendly and helpful." - Sarah, Jhapa</li>
+                        <li>"A perfect place to stay in Kathmandu. Clean rooms and great facilities." - Rajesh, Siraha</li>
+                        <li>"Loved the location and the vibe of the hostel. Highly recommended!" - Emma, Salyan</li>
                     </ul>
                 </div>
             </div>
             <button class="cta-button">Book Now</button>
         </section>
+
+        <!-- not wrking external -->
         <style>
             .feed {
                 display: flex;
@@ -83,11 +87,12 @@
             }
         </style>
 
+        <!-- dft abt us -->
         <section id="about" class="hidden-right" style="display: none;">
             <h2>About Us</h2>
             <div class="about-content">
                 <img src="about.jpg" alt="About Our Hostel">
-                <p>Established in 2010, Paradise Hostel has been providing exceptional accommodation services to travelers from around the world. Nestled in the vibrant city of Kathmandu, our commitment to quality and comfort makes us the preferred choice for both short and long-term stays.</p>
+                <p>Established in 2010, Wall Maria Hostel has been providing exceptional accommodation services to travelers from around the world. Nestled in the vibrant city of Kathmandu, our commitment to quality and comfort makes us the preferred choice for both short and long-term stays.</p>
                 <p>Our hostel is more than just a place to stay; it’s a community where travelers can connect, share stories, and create unforgettable memories. We pride ourselves on offering a welcoming environment with modern amenities and personalized services.</p>
                 <p>We are located in a prime area, making it easy for guests to explore the city's rich culture, historical landmarks, and vibrant nightlife. Whether you're here for adventure, relaxation, or work, Paradise Hostel is your perfect home away from home.</p>
                 <div class="features">
@@ -115,6 +120,7 @@
             </div>
         </section>
 
+        <!-- dft room -->
         <section id="rooms" class="hidden-left" style="display: none;">
             <h2>Our Rooms</h2>
             <div class="room-grid">
@@ -142,9 +148,9 @@
                 </div>
             </div>
 
-            <!-- Room numbers from 1 to 40 -->
+            <!-- Room no. 1 to 40 not wrking/ color not wrking -->
             <div class="room-grid" style="display: grid; grid-template-columns: repeat(5, 1fr); gap: 10px; margin-top: 20px;">
-                <!-- Example for room numbers -->
+
                 <div class="room-card" style="background-color: #f8d7da; border: 1px solid #f5c6cb; padding: 10px; text-align: center;">
                     <h3>Room 1</h3>
                     <p>Status: <b>Occupied</b></p>
@@ -308,6 +314,7 @@
             </div>
         </section>
 
+        <!-- srvc -->
         <section id="amenities" class="hidden-right" style="display: none;">
             <h2>Amenities</h2>
             <div class="amenities-grid">
@@ -354,6 +361,7 @@
             </div>
         </section>
 
+        <!-- cont. glitched smt -->
         <section id="contact" class="hidden-left" style="display: none;">
             <h2>Contact Us</h2>
             <div class="contact-container">
@@ -380,10 +388,11 @@
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
-            <p>&copy; 2023 Paradise Hostel. All rights reserved.</p>
+            <p>&copy; 2023 Wall Maria Hostel. All rights reserved.</p>
         </div>
     </footer>
 
+    <!-- dft booking form -->
     <div id="booking-modal" class="modal">
         <div class="modal-content">
             <span class="close-button" onclick="closeBookingModal()">&times;</span>
@@ -421,7 +430,8 @@
             </form>
         </div>
     </div>
-
+<!-- end bkg frm -->
+    <!-- cnfrm bkg frm -->
     <div id="confirmation-modal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
@@ -429,7 +439,7 @@
             <p>Your booking has been confirmed. We will contact you shortly. Thank you!</p>
         </div>
     </div>
-
+ <!-- not wrking external -->
     <script src="hsjs.js"></script>
     <script>
         function openBookingModal(room) {
