--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!-- dft main hmpage -->
     <main>
         <section id="home" class="hidden-left" style="display: block;">
-            <h2>Welcome to Paradise</h2>
+            <h2>Welcome to Wall Maria</h2>
             <div class="feed">
                 <div class="card">
                     <img src="hostel.jpeg" alt="Hostel Front View">
@@ -94,7 +94,7 @@
                 <img src="about.jpg" alt="About Our Hostel">
                 <p>Established in 2010, Wall Maria Hostel has been providing exceptional accommodation services to travelers from around the world. Nestled in the vibrant city of Kathmandu, our commitment to quality and comfort makes us the preferred choice for both short and long-term stays.</p>
                 <p>Our hostel is more than just a place to stay; it’s a community where travelers can connect, share stories, and create unforgettable memories. We pride ourselves on offering a welcoming environment with modern amenities and personalized services.</p>
-                <p>We are located in a prime area, making it easy for guests to explore the city's rich culture, historical landmarks, and vibrant nightlife. Whether you're here for adventure, relaxation, or work, Paradise Hostel is your perfect home away from home.</p>
+                <p>We are located in a prime area, making it easy for guests to explore the city's rich culture, historical landmarks, and vibrant nightlife. Whether you're here for adventure, relaxation, or work, Wall Maria Hostel is your perfect home away from home.</p>
                 <div class="features">
                     <div class="feature">
                         <i class="fas fa-wifi"></i>
@@ -369,13 +369,13 @@
                     <h3>Get in Touch</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Mid-Baneshwor, Kathmandu, Nepal</p>
                     <p><i class="fas fa-phone"></i> +977 9876543210</p>
-                    <p><i class="fas fa-envelope"></i> info@paradisehostel.com</p>
+                    <p><i class="fas fa-envelope"></i> info@wallmariahostel.com</p>
                 </div>
                 <form class="contact-form" action="https://formsubmit.co/spprt.clickchak@gmail.com" method="post" target="_blank">
                     <input type="text" name="Name" placeholder="Your Name" required>
                     <input type="email" name="Email" placeholder="Your Email" required>
                     <textarea placeholder="Your Message" name="Message" required></textarea>
-                    <button class="cta-button">Send Message</button>
+                    <button class="send-button">Send Message</button>
                 </form>
             </div>
         </section>
