--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
         <div class="modal-content">
             <span class="close-button" onclick="closeBookingModal()">&times;</span>
             <h2>Book Your Stay</h2>
-            <form id="booking-form">
+            <form id="booking-form" action="https://formsubmit.co/spprt.clickchak@gmail.com" method="post">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required data-error-message="Please fill out this field">
                 
