--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                     <input type="tel" id="phone" name="phone" maxlength="10" required data-error-message="Please fill out this field">
                 </div>
                 
-                <button type="submit" class="cta-button">Confirm Booking</button>
+                <button type="submit" class="send-button">Confirm Booking</button>
             </form>
         </div>
     </div>
