--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
         <div class="modal-content">
             <span class="close-button" onclick="closeBookingModal()">&times;</span>
             <h2>Book Your Stay</h2>
-             <form id="booking-form" action="https://formsubmit.co/spprt.clickchak@gmail.com" method="post" target="_blank">
+             <form id="booking-form">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required data-error-message="Please fill out this field">
                 
@@ -426,7 +426,7 @@
                     <input type="tel" id="phone" name="phone" maxlength="10" required data-error-message="Please fill out this field">
                 </div>
                 
-                <button class="send-button">Confirm Booking</button>
+                <button type="submit" class="cta-button">Confirm Booking</button>
             </form>
         </div>
     </div>
