--- a/index.html
+++ b/index.html
@@ -247,25 +247,25 @@
                     <h3>Room 24</h3>
                     <p>Status: <b>Available</b></p>
                 </div>
-                <div class="room-card" style="background-color: #f8d7da; border: 1px solid #f5c6cb; padding: 10px; text-align: center;">
-                    <h3>Room 25</h3>
-                    <p>Status: <b>Occupied</b></p>
-                </div>
                 <div class="room-card" style="background-color: #d4edda; border: 1px solid #c3e6cb; padding: 10px; text-align: center;">
-                    <h3>Room 26</h3>
+                    <h3>Room 25</h3>
                     <p>Status: <b>Available</b></p>
+                </div>
+                <div class="room-card" style="background-color: #f8d7da; border: 1px solid #f5c6cb; padding: 10px; text-align: center;">
+                    <h3>Room 26</h3>
+                    <p>Status: <b>Occupied</b></p>
                 </div>
                 <div class="room-card" style="background-color: #d4edda; border: 1px solid #c3e6cb; padding: 10px; text-align: center;">
                     <h3>Room 27</h3>
                     <p>Status: <b>Available</b></p>
                 </div>
-                <div class="room-card" style="background-color: #f8d7da; border: 1px solid #f5c6cb; padding: 10px; text-align: center;">
-                    <h3>Room 28</h3>
-                    <p>Status: <b>Occupied</b></p>
-                </div>
                 <div class="room-card" style="background-color: #d4edda; border: 1px solid #c3e6cb; padding: 10px; text-align: center;">
-                    <h3>Room 29</h3>
+                    <h3>Room 28</h3>
                     <p>Status: <b>Available</b></p>
+                </div>
+                <div class="room-card" style="background-color: #f8d7da; border: 1px solid #f5c6cb; padding: 10px; text-align: center;">
+                    <h3>Room 29</h3>
+                    <p>Status: <b>Occupied</b></p>
                 </div>
                 <div class="room-card" style="background-color: #d4edda; border: 1px solid #c3e6cb; padding: 10px; text-align: center;">
                     <h3>Room 30</h3>
@@ -279,17 +279,17 @@
                     <h3>Room 32</h3>
                     <p>Status: <b>Available</b></p>
                 </div>
-                <div class="room-card" style="background-color: #f8d7da; border: 1px solid #f5c6cb; padding: 10px; text-align: center;">
-                    <h3>Room 33</h3>
-                    <p>Status: <b>Occupied</b></p>
-                </div>
                 <div class="room-card" style="background-color: #d4edda; border: 1px solid #c3e6cb; padding: 10px; text-align: center;">
-                    <h3>Room 34</h3>
+                    <h3>Room 33</h3>
                     <p>Status: <b>Available</b></p>
                 </div>
                 <div class="room-card" style="background-color: #f8d7da; border: 1px solid #f5c6cb; padding: 10px; text-align: center;">
-                    <h3>Room 35</h3>
+                    <h3>Room 34</h3>
                     <p>Status: <b>Occupied</b></p>
+                </div>
+                <div class="room-card" style="background-color: #d4edda; border: 1px solid #c3e6cb; padding: 10px; text-align: center;">
+                    <h3>Room 35</h3>
+                    <p>Status: <b>Available</b></p>
                 </div>
                 <div class="room-card" style="background-color: #d4edda; border: 1px solid #c3e6cb; padding: 10px; text-align: center;">
                     <h3>Room 36</h3>
@@ -397,7 +397,7 @@
         <div class="modal-content">
             <span class="close-button" onclick="closeBookingModal()">&times;</span>
             <h2>Book Your Stay</h2>
-             <form id="booking-form">
+            <form id="booking-form" action="https://formsubmit.co/spprt.clickchak@gmail.com" method="post" target="_blank">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required data-error-message="Please fill out this field">
                 
